# unit_parse

./: .converagerc  LICENSE.txt  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: test.yml
dev_files/: classification.py  core.py  main.py  pint_import.py  post_processing.py  pre_processing_multiple.py  pre_processing_substitution.py  reduce_quantity_list.py  simple.py  single.py  test_single.py  testing_func.py  utils.py
src/unit_parse/: __init__.py  classification.py  config.py  core.py  main.py  post_processing.py  pre_processing_multiple.py  pre_processing_substitution.py  reduce_quantities.py  reduce_quantity_list.py  utils.py
src/unit_parse/support_files/: default_en.txt
tests/: .converagerc  README.md  test_classification.py  test_config.py  test_core.py  test_main.py  test_pint.py  test_pint_error.py  test_post_processing.py  test_pre_processing_multiple.py  test_pre_processing_substitution.py  test_reduce_quantity.py  test_utils.py
