[metadata]
name = unit_parse
version = 0.1.9
description = Parse units from strings. From mess to order!
long_description = file: README.md
long_description_content_type = text/markdown
author = Dylan Walsh
url = https://github.com/dylanwal/unit_parse
license = BSD
license_file = LICENSE.txt
platforms = any
classifiers =
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9

[options]
packages =
    unit_parse
python_requires = >=3.9
package_dir =
    =src
zip_safe = no
include_package_data = true
install_requires =
    pint==0.19

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0
    mypy>=0.910
    flake8>=3.9

[flake8]
max-line-length = 160
exclude = /unit_parse/support_files
